--- a/config.yaml
+++ b/config.yaml
@@ -56,7 +56,7 @@ params:
   title: "Personal Site"
   description: Myself
   # staticPath: ""  # The path to serve the static files from
-  favicon: "/fav.png"
+  favicon: None
 
   # Whether to serve bootstrap css and js files from CDN or not. Can be set to true, "css" or "js" to choose between
   # serving both, only the css, or only the js files through the CDN. Any other value will make so that CDN is not used.
@@ -293,7 +293,7 @@ params:
         image: /musicPNG.png
         featured:
           name: Demo
-          link: https://hugo-profile.netlify.app
+          link: https://musicrecommender-bb9ef21e087f.herokuapp.com/
         badges:
           - "SVD"
           - "PCA"
